fix result alignement

--- a/nemo/static/stylesheets/result.css
+++ b/nemo/static/stylesheets/result.css
@@ -96,7 +96,7 @@ body {
 }
 
 .results-section {
-  margin-left: 10vw;
+  margin-left: 15vw;
 }
 
 .som {
